--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@clerk/nextjs": "^6.12.0",
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -46,6 +47,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "stripe": "^17.6.0",
+    "svix": "^1.59.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.5.0",
