--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@stripe/connect-js": "^3.3.21",
     "@stripe/react-connect-js": "^3.3.20",
     "@stripe/react-stripe-js": "^3.1.1",
