--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:domains": "node scripts/test-domains.js",
+    "test:api": "node scripts/test-api-routes.js",
+    "test:all": "npm run test:domains && npm run test:api",
+    "setup:domains": "sudo ./scripts/setup-local-domains.sh",
+    "seed:test": "node scripts/seed-test-data.js"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
     "@clerk/nextjs": "^6.12.0",
+    "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -19,6 +24,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
@@ -31,14 +37,10 @@
     "@stripe/react-connect-js": "^3.3.20",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
-    "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-query-devtools": "^5.66.0",
     "@uploadthing/react": "^7.2.0",
-    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "install": "^0.13.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
@@ -47,6 +49,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "stripe": "^17.6.0",
     "svix": "^1.59.2",
     "tailwind-merge": "^3.0.1",
@@ -56,7 +59,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
