--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "svix": "^1.59.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.5.1",
     "uploadthing": "^7.5.0",
     "zod": "^3.24.2"
   },
