--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-google-maps/api": "^2.20.6",
     "@stripe/connect-js": "^3.3.21",
     "@stripe/react-connect-js": "^3.3.20",
     "@stripe/react-stripe-js": "^3.1.1",
@@ -52,6 +53,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-google-autocomplete": "^2.7.4",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
