--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toggle": "^1.1.3",
+    "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-google-maps/api": "^2.20.6",
     "@react-pdf/renderer": "^4.3.0",
@@ -52,6 +54,7 @@
     "next-themes": "^0.4.4",
     "npm": "^11.1.0",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-google-autocomplete": "^2.7.4",
@@ -70,6 +73,7 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
