--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^19.0.0",
     "react-google-autocomplete": "^2.7.4",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
     "stripe": "^17.6.0",
