--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@stripe/react-connect-js": "^3.3.20",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@uploadthing/react": "^7.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
