--- a/package.json
+++ b/package.json
@@ -51,14 +51,14 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.475.0",
-    "next": "15.1.3",
+    "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "npm": "^11.1.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-big-calendar": "^1.18.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-google-autocomplete": "^2.7.4",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
@@ -79,7 +79,7 @@
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.3",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "prisma": "^6.5.0",
     "tailwindcss": "^3.4.1",
