--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@hookform/resolvers": "^4.1.3",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.2.1",
     "@prisma/extension-optimize": "^1.1.8",
@@ -47,6 +48,7 @@
     "@uploadthing/react": "^7.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cuid": "^3.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.6.3",
