--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "postinstall": "prisma generate",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build",
-    "build": "prisma generate && next build",
+    "postinstall": "prisma generate && prisma migrate deploy",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
