Got waiver working with docuseal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["jest", "node"],
+    "types": ["vitest/globals", "node"],
     "plugins": [
       {
         "name": "next"
