--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "postinstall": "prisma generate && prisma migrate deploy",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
@@ -43,6 +41,7 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/pdfkit": "^0.13.9",
     "@uploadthing/react": "^7.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,10 +55,11 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "npm": "^11.1.0",
-    "react": "^18.3.1",
+    "pdfkit": "^0.17.0",
+    "react": "19.1.0",
     "react-big-calendar": "^1.18.0",
     "react-day-picker": "^9.6.7",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.1.0",
     "react-google-autocomplete": "^2.7.4",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
