--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "cuid": "^3.0.0",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.6.3",
@@ -58,7 +59,7 @@
     "pdfkit": "^0.17.0",
     "react": "19.1.0",
     "react-big-calendar": "^1.18.0",
-    "react-day-picker": "^9.6.7",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.1.0",
     "react-google-autocomplete": "^2.7.4",
     "react-hook-form": "^7.54.2",
