--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.2.1",
     "@prisma/extension-optimize": "^1.1.8",
+    "@radix-ui/react-accordion": "^1.2.9",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
