--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@types/pdfkit": "^0.13.9",
     "@uploadthing/react": "^7.2.0",
+    "chroma-js": "^3.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cuid": "^3.0.0",
@@ -80,6 +81,8 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/chroma-js": "^3.1.1",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.12",
     "@types/react": "^18.3.3",
