--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postinstall": "prisma generate && prisma migrate deploy",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
