--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "lint": "next lint",
     "test": "vitest"
   },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom",
+    "next": "$next"
+  },
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@hookform/resolvers": "^4.1.3",
