--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "lucide-react": "^0.475.0",
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "npm": "^11.1.0",
     "pdfkit": "^0.17.0",
     "react": "19.1.0",
@@ -75,6 +75,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
+    "sonner": "^2.0.5",
     "stripe": "^18.1.0",
     "svix": "^1.59.2",
     "tailwind-merge": "^3.0.1",
