--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev --turbopack",
     "postinstall": "prisma generate && prisma migrate deploy",
     "build": "npm run build:embed && next build",
+    "build:static": "npm run build:embed && next build && next export",
     "build:embed": "node scripts/build-embed.js",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:k6": "node __test__/load/api-load-test-node.js",
+    "lighthouse": "lhci autorun",
+    "quality:check": "npm run test && npm run test:k6 && npm run lighthouse"
   },
   "overrides": {
     "react": "$react",
@@ -89,6 +94,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@lhci/cli": "^0.15.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -99,16 +105,21 @@
     "@types/react": "^18.3.3",
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18.3.0",
-    "@vitest/ui": "^3.1.2",
+    "@types/supertest": "^6.0.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-fetch": "^3.3.2",
+    "node-mocks-http": "^1.17.2",
+    "ora": "^5.4.1",
     "postcss": "^8",
     "prisma": "^6.5.0",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5",
-    "vitest": "^3.1.2"
+    "yargs": "^17.7.2"
   }
 }
