fixed linter pt5

--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5",
+    "vitest": "^3.2.4",
     "yargs": "^17.7.2"
   }
 }
