--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@hookform/resolvers": "^4.1.3",
+    "@opentelemetry/semantic-conventions": "^1.36.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.2.1",
@@ -49,7 +50,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-google-maps/api": "^2.20.6",
     "@react-pdf/renderer": "^4.3.0",
-    "@sentry/nextjs": "^9.22.0",
+    "@sentry/nextjs": "^9.42.1",
     "@stripe/connect-js": "^3.3.21",
     "@stripe/react-connect-js": "^3.3.20",
     "@stripe/react-stripe-js": "^3.1.1",
